--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,22 +6,30 @@
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
-		<link
-		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-		{% block stylesheets %}
-			{# BOOTSTRAP CDN #}
-			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-			{{ encore_entry_link_tags('app') }}
+
+		{% block head %}
 			{# STYLE.CSS #}
-			<link rel="stylesheet" href="{{ asset('css/styles.css') }}">
+			<link
+			rel="stylesheet" href="{{ asset('css/styles.css') }}">
+
+			<!-- CSS only -->
+			<link
+			rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/css/bootstrap.min.css" integrity="sha512-+BCHFatPu3dmpAHoj0O1hA2TAtNOmVme9P4Nkjn5l2eI9wocwsopp1ttycgRxkaKWyTnNr4 journal-article Ai4=" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
+
+			<!-- Font Awesome -->
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+		{% endblock %}
+
+		{% block scripts %}
+			<!-- JavaScript and jQuery -->
+			<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/umd/popper.min.js" integrity="sha512-FccCW8nAirDsE1FzZMIX1SJU6RuQBWb5HMBb7NeUjA50E93gj8LUW3ISC/St1F52ysDiAaU26ctH1faFl+RbUw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-iQ5C5X+hK+PnaoRyIo4yIo3URTec8+DZ35Ck2qZZgVotDqb8voeVK13gwJBAY3eB" crossorigin="anonymous"></script>
 
 		{% endblock %}
 
-		{% block javascripts %}
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-			{{ encore_entry_script_tags('app') }}
-		{% endblock %}
+
 	</head>
 	<body>
 		<div class="container"> {% block body %}{% endblock %}
