--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,44 +1,60 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello
+{% block title %}Home ECF Garage
+{% endblock %}
+
+{% block head %}
+	{{ parent() }}
+	<link rel="stylesheet" href="{{ asset('css/styles.css') }}">
 {% endblock %}
 
 {% block body %}
 
-	<div class="example-wrapper">
-		<h1>Hello</h1>
-		<p>Je mange du beurre de caillou</p>
-	</div>
+	{% block content %}
 
-	<table class="table">
-		<thead>
-			<tr>
-				<th scope="col">#</th>
-				<th scope="col">First</th>
-				<th scope="col">Last</th>
-				<th scope="col">Handle</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<th scope="row">1</th>
-				<td>Mark</td>
-				<td>Otto</td>
-				<td>@mdo</td>
-			</tr>
-			<tr>
-				<th scope="row">2</th>
-				<td>Jacob</td>
-				<td>Thornton</td>
-				<td>@fat</td>
-			</tr>
-			<tr>
-				<th scope="row">3</th>
-				<td colspan="2">Larry the Bird</td>
-				<td>@twitter</td>
-			</tr>
-		</tbody>
-	</table>
+		{% include 'navbar.html.twig' %}
+
+		<div class="example-wrapper">
+			<h1>Hello</h1>
+			<p>Je mange du beurre de caillou</p>
+		</div>
+
+		<table class="table">
+			<thead>
+				<tr>
+					<th scope="col">#</th>
+					<th scope="col">First</th>
+					<th scope="col">Last</th>
+					<th scope="col">Handle</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th scope="row">1</th>
+					<td>Mark</td>
+					<td>Otto</td>
+					<td>@mdo</td>
+				</tr>
+				<tr>
+					<th scope="row">2</th>
+					<td>Jacob</td>
+					<td>Thornton</td>
+					<td>@fat</td>
+				</tr>
+				<tr>
+					<th scope="row">3</th>
+					<td colspan="2">Larry the Bird</td>
+					<td>@twitter</td>
+				</tr>
+			</tbody>
+		</table>
+
+		<div class="divred">je mange un caillou délicieu</div>
+
+
+		{% include 'footer.html.twig' %}
+
+	{% endblock %}
 
 
 {% endblock %}
