--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,19 +1,24 @@
+body {
+  padding: 0;
+  margin: 0;
+}
+
 .divred {
   background-color: aqua;
   color: red;
 }
 
-/* Navbar start  */
-.navbar {
-  background-color: #000;
-}
-
-.nav-item {
-  display: inline-block;
-}
-
 .navbar-brand {
-  position: absolute;
+  font-size: 25px;
+  font-weight: bold;
+  color: #fff;
+  position: relative;
+  left: 80px;
+}
+
+.navbar-brand:hover {
+  color: blue;
+  background-color: #fff;
 }
 
 .nav-link {
@@ -23,8 +28,15 @@
   left: 80px;
 }
 
+.nav-item:hover .nav-link {
+  background-color: white;
+  color: blue;
+}
+
 .nav-link:hover {
-  background-color: #555;
+  background-color: white;
+  color: blue;
+  font-weight: bold;
 }
 
 .navbar-toggler {
@@ -129,6 +141,8 @@
 .social-icons a:hover {
   transform: translateY(-3px);
   transition: all 0.2s ease-in-out;
+  background-color: white;
+  color: blue;
 }
 
 .back-to-top {
