--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,25 +14,26 @@
 
 			<!-- CSS only -->
 			<link
-			rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/css/bootstrap.min.css" integrity="sha512-+BCHFatPu3dmpAHoj0O1hA2TAtNOmVme9P4Nkjn5l2eI9wocwsopp1ttycgRxkaKWyTnNr4 journal-article Ai4=" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 
 
 			<!-- Font Awesome -->
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 		{% endblock %}
 
-		{% block scripts %}
-			<!-- JavaScript and jQuery -->
-			<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/umd/popper.min.js" integrity="sha512-FccCW8nAirDsE1FzZMIX1SJU6RuQBWb5HMBb7NeUjA50E93gj8LUW3ISC/St1F52ysDiAaU26ctH1faFl+RbUw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-iQ5C5X+hK+PnaoRyIo4yIo3URTec8+DZ35Ck2qZZgVotDqb8voeVK13gwJBAY3eB" crossorigin="anonymous"></script>
+		{% block scripts %}<!-- JavaScript and jQuery -->
+			{# <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+												<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/umd/popper.min.js" integrity="sha512-FccCW8nAirDsE1FzZMIX1SJU6RuQBWb5HMBb7NeUjA50E93gj8LUW3ISC/St1F52ysDiAaU26ctH1faFl+RbUw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+												<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-iQ5C5X+hK+PnaoRyIo4yIo3URTec8+DZ35Ck2qZZgVotDqb8voeVK13gwJBAY3eB" crossorigin="anonymous"></script> #}
 
 		{% endblock %}
 
 
 	</head>
 	<body>
-		<div class="container"> {% block body %}{% endblock %}
-			</div>
-		</body>
-	</html>
+
+		{% block body %}{% endblock %}
+
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+	</body>
+</html>
