--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -1,14 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-dark navbar-dark bg-black">
-	<div class="container-fluid">
-		<a class="navbar-brand" href="">
-			<i class="fas fa-home"></i>
-		</a>
+<nav class="navbar navbar-expand-xl navbar-dark navbar-dark bg-black">
+	<a class="navbar-brand m-2" href="{{ path('app_home') }}">
+		<i class="fas fa-home"></i>
+	</a>
+	<div class="container">
 
-		<button class="navbar-toggler menu-toggle collapsed d-flex d-lg-none flex-column justify-content-around" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<button class="navbar-toggler menu-toggle collapsed d-flex d-lg-none flex-column justify-content-around ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="toggler-icon top-bar"></span>
 			<span class="toggler-icon middle-bar"></span>
 			<span class="toggler-icon bottom-bar"></span>
 		</button>
+
 		<div class="collapse navbar-collapse menu" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
