--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -5,4 +5,8 @@
 
 {% block main %}
 	<h1>Bienvenue sur l'administration</h1>
+
+	<a class="navbar-brand m-2" href="{{ path('app_home') }}">
+		<i class="fas fa-home"></i>
+	</a>
 {% endblock %}
