--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -13,16 +13,19 @@
 		<div class="collapse navbar-collapse menu" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="">Les Menus</a>
+					<a class="nav-link active" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="">Horaires</a>
+					<a class="nav-link" href="{{ path('app_voitures') }}">Nos voitures</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="">Réserver une table</a>
+					<a class="nav-link" href="">Livre d'or</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="">
+					<a class="nav-link" href="">Contact</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('app_login') }}">
 						<i class="fas fa-user"></i>
 						Se connecter</a>
 				</li>
