--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -173,32 +173,8 @@ body {
 
 /* Card style */
 
-.card {
-  height: 350px;
+.card-img-top {
   width: 100%;
-  overflow: hidden;
-}
-
-.img-fluid {
-  height: 150px;
-  width: 100%;
+  height: 5vw;
   object-fit: cover;
-}
-
-.card-body {
-  height: 200px;
-}
-
-@media (max-width: 576px) {
-  .card {
-    height: auto;
-  }
-
-  .img-fluid {
-    height: auto;
-  }
-
-  .card-body {
-    height: auto;
-  }
 }
