création du system de commentaire ( fail ) + system email ( ok )

--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -22,7 +22,7 @@
 					<a class="nav-link" href="">Livre d'or</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="">Contact</a>
+					<a class="nav-link" href="{{ path('app_contact')}}">Contact</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="{{ path('app_login') }}">
